--- a/ClubDeportivo/Properties/Resources.resx
+++ b/ClubDeportivo/Properties/Resources.resx
@@ -118,11 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="pngtransparente" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pngtransparente1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="0-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\0-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LOGO PIRATA" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LOGO PIRATA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fondo login" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fondo login.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fondo-papel-tapiz-colorido-borroso-vivo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fondo-papel-tapiz-colorido-borroso-vivo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="logo-design-golden-ratio-infinity" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo-design-golden-ratio-infinity.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -130,10 +136,13 @@
   <data name="Label1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Label1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="LOGO PIRATA" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\LOGO PIRATA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pngtransparente" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pngtransparente1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="fondo login" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\fondo login.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Guardar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Guardar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="background-with-blue-gradient-free-vector" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\background-with-blue-gradient-free-vector.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
